Timeline canvas now supports DPI scaling. Fixed a bug where jpeg group frames could be requested with a dynamic layout at a resolution known to be too small. Fixed a bug where the jpeg supersampling setting affected the decision of whether or not to use a dynamic group layout for H.264 streams too.

--- a/ui3/ui3.css
+++ b/ui3/ui3.css
@@ -3026,6 +3026,7 @@ div.invisibleLabel
 	background-color: var(--timeline-background-color);
 	position: relative;
 	z-index: 1;
+	overflow: hidden;
 }
 
 .timelineLoader
